--- a/Reactive-Forms/src/app/sample-reactive-form/sample-reactive-form.component.html
+++ b/Reactive-Forms/src/app/sample-reactive-form/sample-reactive-form.component.html
@@ -34,7 +34,11 @@
       <label class="form-check-label" for="flexSwitchCheckDefault">Is book published?</label>
       <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" formControlName="isPublished">
     </div><br>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="button" class="btn btn-primary" (click)="initSingleValues()">Update title</button>
+      <button type="button" class="btn btn-primary" (click)="initAllValues()">Update all</button>
+    </div>
   </form>
 
   <div style="color:white">
